fix z-index of notification

--- a/src/containers/Header/Notification/styles.module.scss
+++ b/src/containers/Header/Notification/styles.module.scss
@@ -15,7 +15,7 @@ $margin-horizontal-mobile: 15px;
 	position: fixed;
 	top: 78px;
 	right: 8.5%;
-	z-index: 10000;
+	z-index: 100;
 	border-radius: 8px;
 	border: 1px solid $color-green;
 	box-sizing: border-box;
